# my-gtest

./: CMakeLists.txt  README.md
inc/: checksum.h
src/: checksum.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
